--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,7 +37,8 @@ h6 {
 }
 
 .orange-button,
-.blue-button {
+.blue-button,
+.green-button {
   border: none;
   padding: 1em 2em;
   letter-spacing: 1px;
@@ -45,7 +46,6 @@ h6 {
   border-radius: 20px;
   box-shadow: -7px 6px 25px 2px rgba(11, 11, 11, 0.202);
   color: white;
-  transition: all 0.3s ease;
 }
 
 .orange-button {
@@ -68,9 +68,20 @@ h6 {
   );
 }
 
+.green-button {
+  background: linear-gradient(
+    315deg,
+    hsla(76, 70%, 50%, 1) 4%,
+    hsla(80, 65%, 48%, 1) 24%,
+    hsla(85, 60%, 46%, 1) 54%
+  );
+}
+
 .orange-button:hover,
-.blue-button:hover {
+.blue-button:hover,
+.green-button:hover {
   cursor: pointer;
   transform: translateY(-3px);
   box-shadow: -7px 10px 30px 3px rgba(11, 11, 11, 0.3);
+  transition: all 0.3s ease;
 }
