--- a/client/src/features/builder/ColorPicker.modules.css
+++ b/client/src/features/builder/ColorPicker.modules.css
@@ -20,3 +20,15 @@
   margin-left: 1em;
   margin-top: 0.5em;
 }
+
+.color-picker {
+  position: absolute;
+  left: 190px;
+  top: 30px;
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+  z-index: 10;
+}
