--- a/client/src/features/builder/Preview.modules.css
+++ b/client/src/features/builder/Preview.modules.css
@@ -1,5 +1,45 @@
 .preview {
-  min-height: 600px;
+  min-height: 400px;
   border: 2px dashed gray;
   background: white;
+  margin: 2em;
+  padding: 1em;
+  transition: background 0.3s ease;
+}
+
+.preview-over {
+  background: #f0f9ff;
+}
+
+.section-preview {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.section-controllers {
+  display: flex;
+}
+
+.section-controllers span {
+  display: flex;
+  align-items: center;
+  font-size: 1.2rem;
+  color: #666;
+}
+
+.drag-handle {
+  cursor: grab;
+  padding: 0.25rem;
+  color: #666;
+  display: flex;
+  align-items: center;
+}
+
+.section-controllers span:hover {
+  color: #333;
+}
+
+.section-controllers span:nth-child(2):hover {
+  cursor: pointer;
 }
