--- a/client/src/features/builder/ColorPicker.modules.css
+++ b/client/src/features/builder/ColorPicker.modules.css
@@ -23,12 +23,15 @@
 
 .color-picker {
   position: absolute;
-  left: 190px;
-  top: 30px;
+  left: 15%;
+  top: 15%;
   display: flex;
   align-items: flex-start;
   gap: 10px;
   display: flex;
   flex-direction: column;
   z-index: 10;
+  background: white;
+  padding: 1em;
+  border-radius: 1em;
 }
