Updated styling so it can hide borders and control buttons when in preview and download mode

--- a/client/src/features/builder/Preview.modules.css
+++ b/client/src/features/builder/Preview.modules.css
@@ -11,6 +11,10 @@
   background: #f0f9ff;
 }
 
+.preview-hidden-border {
+  border: none !important;
+}
+
 .section-preview {
   display: flex;
   align-items: center;
