Styling updates for colors to use variables

--- a/client/src/components/Builder/BuilderNav.modules.css
+++ b/client/src/components/Builder/BuilderNav.modules.css
@@ -29,7 +29,7 @@
   padding: 0.5em 1em;
   border-radius: 2em;
   gap: 2em;
-  background: #363b42;
+  background: var(--dark-background);
   align-items: center;
 }
 
